# entity-component-system

./: CMakeLists.txt  main.cpp
ecs/: Component.h  Entity.h  Group.h  Manager.cpp  Manager.h  System.cpp  System.h
events/: Event.h  TestEvent.h
